--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "@anio-js-core-foundation/create-async-mutex",
+  "name": "@anio-js-foundation/create-async-mutex",
   "version": "1.0.3",
   "description": "Create a mutex.",
-  "main": "index.mjs",
+  "main": "./dist/package.mjs",
   "author": "Anio Software <info@anio.software>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anio-js-core-foundation/create-async-mutex.git"
-  }
+    "url": "git+https://github.com/anio-js-foundation/create-async-mutex.git"
+  },
+  "devDependencies": {
+    "@anio-software/npm-package-bundler": "^1.0.0"
+  },
+  "scripts": {
+    "prepare": "./node_modules/.bin/npm-package-bundler ."
+  },
+  "files": [
+    "./dist/package.mjs"
+  ]
 }
